WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21091
Regression: querySelector matches tag names case sensitively
https://bugs.webkit.org/show_bug.cgi?id=21091
Summary
Regression: querySelector matches tag names case sensitively
David Smith
Reported
2008-09-25 00:23:23 PDT
It should be case insensitive in HTML documents. Patch tomorrow; too tired to wait for the world to rebuild right now. This regressed in
http://trac.webkit.org/changeset/35282
because parseSelector doesn't create the dummy stylesheet with a Document, so the CSSParser can't check whether the Document is an HTML one.
Attachments
Fix
(5.06 KB, patch)
2008-09-25 01:18 PDT
,
David Smith
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Smith
Comment 1
2008-09-25 01:18:10 PDT
Created
attachment 23784
[details]
Fix
Eric Seidel (no email)
Comment 2
2008-09-25 01:21:59 PDT
Comment on
attachment 23784
[details]
Fix The change looks fine. I'd like to see an xhtml test as well (or maybe that's already covered?) That could also be done in a follow-up patch.
David Smith
Comment 3
2008-09-25 01:57:59 PDT
Landed with an xhtml test in
r36890
Darin Adler
Comment 4
2008-09-25 09:49:28 PDT
Comment on
attachment 23784
[details]
Fix + std::auto_ptr<CSSSelector> parseSelector(const String&, Document* doc = 0); The parameter should not be named here. +std::auto_ptr<CSSSelector> CSSParser::parseSelector(const String& string, Document* doc) +{ + RefPtr<CSSStyleSheet> dummyStyleSheet = CSSStyleSheet::create(doc); I strongly prefer "document" over "doc", but that's just my personal taste.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug