WebCore:

2008-09-25  David Smith  <catfish.man@gmail.com>

        Reviewed by Eric Seidel

        fix https://bugs.webkit.org/show_bug.cgi?id=21091
        Regression: querySelector matches tag names case sensitively

        Tests: fast/dom/SelectorAPI/caseTag.html
               fast/dom/SelectorAPI/caseTagX.xhtml

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseSelector): Add a Document argument, since tag case sensitivity is different for HTML documents
        * css/CSSParser.h:
        * dom/Node.cpp:
        (WebCore::Node::querySelector):
        (WebCore::Node::querySelectorAll):

LayoutTests:

2008-09-25  David Smith  <catfish.man@gmail.com>

        Reviewed by Eric Seidel

        Tests for https://bugs.webkit.org/show_bug.cgi?id=21091
        Regression: querySelector matches tag names case sensitively

        * ChangeLog:
        * fast/dom/SelectorAPI/caseTag-expected.txt: Added.
        * fast/dom/SelectorAPI/caseTag.html: Added.
        * fast/dom/SelectorAPI/caseTagX-expected.txt: Added.
        * fast/dom/SelectorAPI/caseTagX.xhtml: Added.



Canonical link: https://commits.webkit.org/29162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36890 268f45cc-cd09-0410-ab3c-d52691b4dbfc