WebCore/dom/Node.cpp
@@ -1345,7 +1345,7 @@ PassRefPtr<Element> Node::querySelector(const String& selectors, NSResolver* res
             p.m_defaultNamespace = defaultNamespace;
     }
 
-    std::auto_ptr<CSSSelector> querySelector = p.parseSelector(selectors);
+    std::auto_ptr<CSSSelector> querySelector = p.parseSelector(selectors, document());
     if (!querySelector.get()) {
         ec = SYNTAX_ERR;
         return 0;
@@ -1405,7 +1405,7 @@ PassRefPtr<NodeList> Node::querySelectorAll(const String& selectors, NSResolver*
             p.m_defaultNamespace = defaultNamespace;
     }
 
-    std::auto_ptr<CSSSelector> querySelector = p.parseSelector(selectors);
+    std::auto_ptr<CSSSelector> querySelector = p.parseSelector(selectors, document());
 
     if (!querySelector.get()) {
         ec = SYNTAX_ERR;
